# llm-showcase

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
example_data/: email-dataset-classified.csv  email-dataset-unclassified.csv
src/: create_vector_store.py  llm_showcase.py  rag_showcase.py
